<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>i2c_motor_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="alejodiscovery20@gmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <build_depend>libi2c-dev</build_depend>
  <build_depend>i2c-tools</build_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
