<?xml version="1.0"?>
<package format="3">
  <name>i2c_motor_driver</name>
  <version>0.0.0</version>
  <description>Package for I2C motor and odometry nodes</description>
  <maintainer email="alejodiscovery20@gmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <build_depend>ament_cmake</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>libi2c-dev</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
